--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 /*  your css code here. If applicable */
-p::before{
+main::before{
     content:"Before Element ";
     color: red;
 }
-p::after{
+main::after{
     content:" After Element";
     color: red;
 }
